[package]
authors = ["Crypto Garage"]
edition = '2018'
name = "bitcoin-rpc-provider"
version = "0.1.0"

[dependencies]
bitcoin = {version = "0.28"}
bitcoincore-rpc = {version = "0.15.0"}
bitcoincore-rpc-json = {version = "0.15.0"}
dlc = {path = "../dlc"}
dlc-manager = {path = "../dlc-manager"}
lightning = {version = "0.0.108", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
lightning-block-sync = {version = "0.0.108", git = "https://github.com/p2pderivatives/rust-lightning/", branch = "split-tx-experiment"}
log = "0.4.14"
rust-bitcoin-coin-selection = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", features = ["rand"]}
