[package]
edition = "2021"
name = "electrs-blockchain-provider"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {version = "0.28.1"}
bitcoin-test-utils = {path = "../bitcoin-test-utils"}
dlc-manager = {path = "../dlc-manager"}
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "*", features = ["derive"]}
simple-wallet = {path = "../simple-wallet"}
