[package]
edition = "2018"
name = "simple-wallet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
dlc = {path = "../dlc"}
dlc-manager = {path = "../dlc-manager"}
rust-bitcoin-coin-selection = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-bitcoin-coin-selection", features = ["rand"]}
secp256k1-zkp = {version = "0.6.0"}
